infra/k8s/ingress-srv.yml
# Ingress wiring (nginx):
#   host tickeing.dev + path /api/users/...  ->  Service auth-srv:3000
#   auth-srv selects pods labeled app: auth (see auth-depl.yaml)
#   those pods listen on container port 3000 (Express in auth/src/index.ts)
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true' # allow regex in the path
spec:
  ingressClassName: nginx
  rules:
    - host: ticketing.dev
      http:
        paths:
          - path: /api/users/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
